--- a/Front - Proyecto/src/output.css
+++ b/Front - Proyecto/src/output.css
@@ -556,6 +556,15 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -628,6 +637,22 @@ video {
   top: 4rem;
 }
 
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
 .z-\[1\] {
   z-index: 1;
 }
@@ -640,8 +665,20 @@ video {
   float: right;
 }
 
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+
 .-mt-2 {
   margin-top: -0.5rem;
+}
+
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+
+.-mt-8 {
+  margin-top: -2rem;
 }
 
 .mb-2 {
@@ -816,6 +853,34 @@ video {
   margin-top: 9.6rem;
 }
 
+.mr-\[\] {
+  margin-right: ;
+}
+
+.mr-\[1\.\] {
+  margin-right: 1.;
+}
+
+.mr-\[1\.5rem\] {
+  margin-right: 1.5rem;
+}
+
+.-ml-3 {
+  margin-left: -0.75rem;
+}
+
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-ml-\[6px\] {
+  margin-left: -6px;
+}
+
+.-ml-4 {
+  margin-left: -1rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -846,6 +911,10 @@ video {
 
 .h-28 {
   height: 7rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-5 {
@@ -920,6 +989,14 @@ video {
   min-height: 36rem;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
 .w-48 {
   width: 12rem;
 }
@@ -940,8 +1017,16 @@ video {
   width: 16rem;
 }
 
+.w-9 {
+  width: 2.25rem;
+}
+
 .w-\[10rem\] {
   width: 10rem;
+}
+
+.w-\[11rem\] {
+  width: 11rem;
 }
 
 .w-\[13rem\] {
@@ -962,6 +1047,10 @@ video {
 
 .w-\[350px\] {
   width: 350px;
+}
+
+.w-\[4\.5rem\] {
+  width: 4.5rem;
 }
 
 .w-\[42px\] {
@@ -1130,6 +1219,11 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1160,9 +1254,19 @@ video {
   padding: 0.5;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -1221,6 +1325,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1260,6 +1369,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .hover\:bg-\[\#2e5c5c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(46 92 92 / var(--tw-bg-opacity));
@@ -1278,11 +1395,6 @@ video {
 .hover\:bg-\[\#D7EFFF\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(215 239 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#F0F9FF\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#ffffff\]:hover {
