--- a/Front - Proyecto/src/Administrativo/output.css
+++ b/Front - Proyecto/src/Administrativo/output.css
@@ -588,10 +588,6 @@ video {
   right: 9rem;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -614,10 +610,6 @@ video {
 
 .top-36 {
   top: 9rem;
-}
-
-.top-4 {
-  top: 1rem;
 }
 
 .top-40 {
@@ -652,16 +644,16 @@ video {
   top: 4rem;
 }
 
-.left-32 {
-  left: 8rem;
+.left-\[9rem\] {
+  left: 9rem;
 }
 
-.left-44 {
-  left: 11rem;
+.top-3 {
+  top: 0.75rem;
 }
 
-.left-40 {
-  left: 10rem;
+.top-6 {
+  top: 1.5rem;
 }
 
 .z-10 {
@@ -672,6 +664,10 @@ video {
   z-index: 20;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .z-\[1\] {
   z-index: 1;
 }
@@ -680,33 +676,8 @@ video {
   z-index: 2;
 }
 
-.z-\[\] {
-  z-index: ;
-}
-
-.z-\[3\] {
-  z-index: 3;
-}
-
-.z-\[5\] {
-  z-index: 5;
-}
-
 .float-right {
   float: right;
-}
-
-.float-left {
-  float: left;
-}
-
-.m-5 {
-  margin: 1.25rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .-ml-36 {
@@ -763,6 +734,10 @@ video {
 
 .ml-12 {
   margin-left: 3rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
 }
 
 .ml-2 {
@@ -841,6 +816,10 @@ video {
   margin-right: 1.25rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -905,22 +884,6 @@ video {
   margin-top: 9.6rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-0 {
-  margin-right: 0px;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -947,6 +910,14 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-28 {
@@ -993,6 +964,10 @@ video {
   height: 220px;
 }
 
+.h-\[28rem\] {
+  height: 28rem;
+}
+
 .h-\[290px\] {
   height: 290px;
 }
@@ -1017,44 +992,12 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[34rem\] {
-  height: 34rem;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
 .h-px {
   height: 1px;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .max-h-\[220px\] {
@@ -1063,6 +1006,18 @@ video {
 
 .min-h-\[36rem\] {
   min-height: 36rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-4 {
@@ -1091,6 +1046,14 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .w-9 {
@@ -1157,21 +1120,28 @@ video {
   width: 100vw;
 }
 
-.w-96 {
-  width: 24rem;
+.w-\[\] {
+  width: ;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-\[80\] {
+  width: 80;
 }
 
-.w-16 {
-  width: 4rem;
+.w-\[80\%\] {
+  width: 80%;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
 }
 
 .min-w-full {
@@ -1200,10 +1170,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1242,6 +1208,10 @@ video {
   border-radius: 50px;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1254,10 +1224,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
@@ -1267,16 +1233,16 @@ video {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
 .border-\[1\.5px\] {
   border-width: 1.5px;
-}
-
-.border-0 {
-  border-width: 0px;
 }
 
 .border-y-2 {
@@ -1301,16 +1267,6 @@ video {
 .border-slate-500 {
   --tw-border-opacity: 1;
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.border-slate-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-
-.border-slate-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
 .bg-\[\#276B58\] {
@@ -1358,24 +1314,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
-}
-
-.from-stone-800 {
-  --tw-gradient-from: #292524 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(41 37 36 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .object-cover {
@@ -1385,6 +1325,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -1399,16 +1343,8 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-\[0\.5\] {
   padding: 0.5;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-2 {
@@ -1441,6 +1377,10 @@ video {
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1525,9 +1465,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+.underline {
+  text-decoration-line: underline;
 }
 
 .shadow-md {
@@ -1737,6 +1676,30 @@ video {
     top: 86px;
   }
 
+  .lg\:left-\[9rem\] {
+    left: 9rem;
+  }
+
+  .lg\:left-\[7rem\] {
+    left: 7rem;
+  }
+
+  .lg\:left-\[6rem\] {
+    left: 6rem;
+  }
+
+  .lg\:left-\[5rem\] {
+    left: 5rem;
+  }
+
+  .lg\:left-\[4rem\] {
+    left: 4rem;
+  }
+
+  .lg\:left-16 {
+    left: 4rem;
+  }
+
   .lg\:-mt-16 {
     margin-top: -4rem;
   }
@@ -1799,6 +1762,10 @@ video {
 
   .lg\:h-\[64px\] {
     height: 64px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:max-h-\[370px\] {
@@ -2065,11 +2032,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:bg-gray-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-gray-600 {
     --tw-bg-opacity: 1;
     background-color: rgb(75 85 99 / var(--tw-bg-opacity));
