--- a/Front - Proyecto/src/Usuario/output.css
+++ b/Front - Proyecto/src/Usuario/output.css
@@ -568,10 +568,6 @@ video {
   left: 2.5rem;
 }
 
-.left-16 {
-  left: 4rem;
-}
-
 .left-5 {
   left: 1.25rem;
 }
@@ -586,10 +582,6 @@ video {
 
 .right-36 {
   right: 9rem;
-}
-
-.right-4 {
-  right: 1rem;
 }
 
 .top-0 {
@@ -616,12 +608,12 @@ video {
   top: 9rem;
 }
 
-.top-4 {
-  top: 1rem;
-}
-
 .top-40 {
   top: 10rem;
+}
+
+.top-6 {
+  top: 1.5rem;
 }
 
 .top-\[108px\] {
@@ -652,16 +644,80 @@ video {
   top: 4rem;
 }
 
-.left-32 {
-  left: 8rem;
+.right-10 {
+  right: 2.5rem;
 }
 
-.left-44 {
-  left: 11rem;
+.right-1 {
+  right: 0.25rem;
 }
 
-.left-40 {
-  left: 10rem;
+.right-72 {
+  right: 18rem;
+}
+
+.right-\[\] {
+  right: ;
+}
+
+.right-\[35rem\] {
+  right: 35rem;
+}
+
+.right-\[30rem\] {
+  right: 30rem;
+}
+
+.right-\[3rem\] {
+  right: 3rem;
+}
+
+.right-\[rem\] {
+  right: rem;
+}
+
+.right-\[27rem\] {
+  right: 27rem;
+}
+
+.right-\[25rem\] {
+  right: 25rem;
+}
+
+.right-\[26rem\] {
+  right: 26rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-52 {
+  top: 13rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[6\] {
+  top: 6;
+}
+
+.top-\[6\.5\] {
+  top: 6.5;
+}
+
+.top-\[6\.5rem\] {
+  top: 6.5rem;
 }
 
 .z-10 {
@@ -672,6 +728,10 @@ video {
   z-index: 20;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .z-\[1\] {
   z-index: 1;
 }
@@ -680,33 +740,8 @@ video {
   z-index: 2;
 }
 
-.z-\[\] {
-  z-index: ;
-}
-
-.z-\[3\] {
-  z-index: 3;
-}
-
-.z-\[5\] {
-  z-index: 5;
-}
-
 .float-right {
   float: right;
-}
-
-.float-left {
-  float: left;
-}
-
-.m-5 {
-  margin: 1.25rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 
 .-ml-36 {
@@ -763,6 +798,10 @@ video {
 
 .ml-12 {
   margin-left: 3rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
 }
 
 .ml-2 {
@@ -841,6 +880,10 @@ video {
   margin-right: 1.25rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -905,20 +948,52 @@ video {
   margin-top: 9.6rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
+.mr-40 {
+  margin-right: 10rem;
 }
 
-.mr-0 {
-  margin-right: 0px;
+.mr-64 {
+  margin-right: 16rem;
+}
+
+.ml-36 {
+  margin-left: 9rem;
+}
+
+.mr-28 {
+  margin-right: 7rem;
+}
+
+.mr-36 {
+  margin-right: 9rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 
-.ml-16 {
-  margin-left: 4rem;
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mr-44 {
+  margin-right: 11rem;
+}
+
+.mr-\[\] {
+  margin-right: ;
+}
+
+.mr-\[10rem\] {
+  margin-right: 10rem;
 }
 
 .box-border {
@@ -947,6 +1022,14 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-28 {
@@ -993,6 +1076,10 @@ video {
   height: 220px;
 }
 
+.h-\[28rem\] {
+  height: 28rem;
+}
+
 .h-\[290px\] {
   height: 290px;
 }
@@ -1017,44 +1104,12 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[34rem\] {
-  height: 34rem;
-}
-
-.h-\[30rem\] {
-  height: 30rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
 .h-px {
   height: 1px;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .max-h-\[220px\] {
@@ -1063,6 +1118,18 @@ video {
 
 .min-h-\[36rem\] {
   min-height: 36rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-4 {
@@ -1091,6 +1158,14 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .w-9 {
@@ -1141,6 +1216,10 @@ video {
   width: 50%;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .w-\[8rem\] {
   width: 8rem;
 }
@@ -1155,23 +1234,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .min-w-full {
@@ -1200,10 +1262,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1242,6 +1300,10 @@ video {
   border-radius: 50px;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1254,10 +1316,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
@@ -1267,16 +1325,16 @@ video {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
 .border-\[1\.5px\] {
   border-width: 1.5px;
-}
-
-.border-0 {
-  border-width: 0px;
 }
 
 .border-y-2 {
@@ -1301,16 +1359,6 @@ video {
 .border-slate-500 {
   --tw-border-opacity: 1;
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.border-slate-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-
-.border-slate-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
 .bg-\[\#276B58\] {
@@ -1358,24 +1406,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
-}
-
-.from-stone-800 {
-  --tw-gradient-from: #292524 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(41 37 36 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .object-cover {
@@ -1385,6 +1417,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-2 {
@@ -1399,16 +1435,8 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .p-\[0\.5\] {
   padding: 0.5;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-2 {
@@ -1525,9 +1553,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+.underline {
+  text-decoration-line: underline;
 }
 
 .shadow-md {
@@ -1725,6 +1752,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:left-16 {
+    left: 4rem;
+  }
+
   .lg\:top-\[130px\] {
     top: 130px;
   }
@@ -1799,6 +1830,10 @@ video {
 
   .lg\:h-\[64px\] {
     height: 64px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:max-h-\[370px\] {
@@ -2065,11 +2100,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:bg-gray-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-gray-600 {
     --tw-bg-opacity: 1;
     background-color: rgb(75 85 99 / var(--tw-bg-opacity));
